Line breaks in ui panels are no longer selectable

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -299,6 +299,7 @@ canvas {
 }
 
 .ui-panel label,
+.ui-panel br,
 .no-select {
     -webkit-touch-callout: none;
     /* iOS Safari */
